nginx-proxy-manager/nginx-proxy-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: npm
  namespace: nginx-proxy-manager
spec:
  type: LoadBalancer
  loadBalancerIP: 172.20.0.89           # адрес в пуле MetalLB
  selector:
    app: nginx-proxy-manager
  ports:
    - { port: 80,  targetPort: http,  name: http }
    - { port: 443, targetPort: https, name: https }
    - { port: 81,  targetPort: admin, name: admin }
