nginx-proxy-manager/nginx-proxy-manager-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-proxy-manager-ingressroute
  namespace: nginx-proxy-manager
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`proxy.k8s.local`)
    kind: Rule
    services:
    - name: npm
      port: 80
